--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Random musings about Python, SystemVerilog, digital design and DSP.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+author: "Alberto Garcia"
 
 twitter_username: 
 github_username:  alb-garcia
