--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
   - jemoji
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
